# raycast_v2

./: .gitignore  LICENSE  README.md  makefile
lib/: board.h  cast.h  draw.h  head.h  loop.h  point.h  start.h
src/: CMakeLists.txt  main.c
